smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/traits/annotation-unclosed-object1.smithy
// Syntax error at line 4, column 8: Expected COLON(':') but found IDENTIFIER('MyString') | Model
namespace com.foo
@foo(
string MyString
